k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: backend
  template:
    metadata:
      name: backend-pod 
      labels: 
         app: backend
    spec:
      containers:
        - name: chatapp-backend
          image: nishika10/chatapp-backend:latest

          resources:         
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
               memory: "256Mi"
               cpu: "200m"

          ports:
           - containerPort: 5001
