k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: frontend
  template:
    metadata:
      name: frontend-pod 
      labels: 
         app: frontend
    spec:
      containers:
        - name: chatapp-frontend
          image: nishika10/chatapp-frontend:latest
          
          resources:         
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
               memory: "256Mi"
               cpu: "200m"

          ports:
           - containerPort: 80
