k8s/mongodb-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  namespace: chat-app
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: mongodb
  template:
    metadata:
      name: mongodb-pod 
      labels: 
         app: mongodb
    spec:
      containers:
        - name: chatapp-mongodb
          image: mongo:latest

          resources:         
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
               memory: "256Mi"
               cpu: "200m"
          ports:
           - containerPort: 27017
          
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
      volumes:
      - name:  mongo-data
        persistentVolumeClaim:
           claimName: mongodb-pvc
